Collada export crashes blender when using a "Copy Location" constraint #39919

Closed
opened 2014-04-27 18:04:10 +02:00 by buche · 7 comments
buche commented 2014-04-27 18:04:10 +02:00 (Migrated from localhost:3001)

System Information
10.9.x

Blender Version
Broken: 2.70.a

Short description of error
When using a "Copy Location" constrained the animation export part fails and blender crashes.
See attached file. The point light copies the location of the animated camera.

City_ortho-redux5.blend

**System Information** 10.9.x **Blender Version** Broken: 2.70.a **Short description of error** When using a "Copy Location" constrained the animation export part fails and blender crashes. See attached file. The point light copies the location of the animated camera. [City_ortho-redux5.blend](https://archive.blender.org/developer/F86178/City_ortho-redux5.blend)
buche commented 2014-04-27 18:04:10 +02:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
buche commented 2014-04-27 18:04:10 +02:00 (Migrated from localhost:3001)
Author

Added subscriber: @buche

Added subscriber: @buche
Bastien Montagne self-assigned this 2014-04-27 18:20:52 +02:00
Author

This issue was referenced by blender/blender-addons-contrib@4aea8f1085

This issue was referenced by blender/blender-addons-contrib@4aea8f10855e9de162ca3ea0c232d2590ec386ba
Author

This issue was referenced by 4aea8f1085

This issue was referenced by 4aea8f10855e9de162ca3ea0c232d2590ec386ba

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4aea8f1085.

Closed by commit 4aea8f1085.
buche commented 2014-04-27 18:31:39 +02:00 (Migrated from localhost:3001)
Author

Wow, that was fast. Thanks!

Wow, that was fast. Thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39919
No description provided.