Fix T39919: Collada export crashes blender when using a "Copy Location" constraint